--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hapi": "^16.4.3",
     "hapi-swagger": "^7.7.0",
     "inert": "^4.2.0",
+    "moment": "^2.18.1",
     "nodemon": "^1.11.0",
     "twilio": "^3.4.0",
     "vision": "^4.1.1"
